# parser-cli

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
documentation/: 01-overview.md  02-cli.md  03-config.md  04-toolchain.md  05-testing.md  06-cleanup.md  README.md  agents.md  config.md  main.md  providers.md  testing.md
guide/: README.md  commands.md  config.md  developers.md  getting-started.md  models.md  testing.md
src/: main.rs
src/agents/: mod.rs
src/config/: mod.rs
src/providers/: mod.rs
