[package]
name = "parser-cli"
version = "0.1.0"
edition = "2021"
description = "AI-powered coding agent that runs in the terminal"

[[bin]]
name = "parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
url = "2.5"
tokio = { version = "1", features = ["macros", "rt"] }
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
